# llvm-full

./: .gitignore  Cargo.toml  README.md  action.yml  build.rs  files-v10.0.1-freebsd-i686.txt  files-v10.0.1-freebsd-x86_64.txt  files-v10.0.1-linux-aarch64-musl.txt  files-v10.0.1-linux-aarch64.txt  files-v10.0.1-linux-i686.txt  files-v10.0.1-linux-x86_64-musl.txt  files-v10.0.1-linux-x86_64.txt  files-v10.0.1-macos-aarch64.txt  files-v10.0.1-macos-x86_64.txt  files-v10.0.1-netbsd-aarch64.txt  files-v10.0.1-netbsd-i686.txt  files-v10.0.1-netbsd-x86_64.txt  files-v10.0.1-openbsd-aarch64.txt  files-v10.0.1-openbsd-i686.txt  files-v10.0.1-openbsd-x86_64.txt  files-v10.0.1-windows-aarch64-msvc.txt  files-v10.0.1-windows-gnu.txt  files-v10.0.1-windows-i686-gnu.txt  files-v10.0.1-windows-i686-msvc.txt  files-v10.0.1-windows-msvc.txt  files-v11.0.1-freebsd-i686.txt  files-v11.0.1-freebsd-x86_64.txt  files-v11.0.1-linux-aarch64-musl.txt  files-v11.0.1-linux-aarch64.txt  files-v11.0.1-linux-i686.txt  files-v11.0.1-linux-x86_64-musl.txt  files-v11.0.1-linux-x86_64.txt  files-v11.0.1-macos-aarch64.txt  files-v11.0.1-macos-x86_64.txt  files-v11.0.1-netbsd-aarch64.txt  files-v11.0.1-netbsd-i686.txt  files-v11.0.1-netbsd-x86_64.txt  files-v11.0.1-openbsd-aarch64.txt  files-v11.0.1-openbsd-i686.txt  files-v11.0.1-openbsd-x86_64.txt  (+226 more)
.github/: build.yml
.github/actions/build-and-package-llvm/: action.yml
.github/actions/build-target/: action.yml
.github/actions/setup-build-deps/: action.yml
.github/workflows/: build-linux-aarch64-musl.yml  build-linux-aarch64.yml  build-linux-i686.yml  build-linux-x86_64-musl.yml  build-linux-x86_64.yml  build-macos-aarch64.yml  build-macos-x86_64.yml  build-windows-aarch64-msvc.yml  build-windows-gnu.yml  build-windows-i686-gnu.yml  build-windows-i686-msvc.yml  build-windows-msvc.yml  build.yml  macos-15-intel--macos-x86_64.yml  macos-latest--macos-aarch64.yml  release.yml  test-action.yml  test-cibuildwheel.yml  test.yml  ubuntu-24.04-arm--linux-aarch64-musl.yml  ubuntu-24.04-arm--linux-aarch64.yml  ubuntu-latest--linux-i686.yml  ubuntu-latest--linux-x86_64-musl.yml  windows-11-arm--windows-aarch64-msvc.yml  windows-latest--windows-i686-gnu.yml
ci/llvmsys-smoke/: Cargo.toml
ci/llvmsys-smoke/src/: main.rs
examples/pyo3-llvm-sys/: Cargo.toml  pyproject.toml
examples/pyo3-llvm-sys/src/: lib.rs
src/: lib.rs
tests/llvm-sys-test/: Cargo.toml  build.rs
tests/llvm-sys-test/src/: lib.rs
